2010-03-10  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/CSharpTokenNode.cs:
	* MonoDevelop.CSharp.Dom/ICSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Dom/CSharpModifierToken.cs:
	* MonoDevelop.CSharp.Dom/AbtractCSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Formatting/DomIndentationVisitor.cs:
	* MonoDevelop.CSharp.Dom/TypeMembers/PropertyDeclaration.cs:
	  Worked on indenting engine.

2010-03-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Formatting/Indent.cs:
	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Dom/AbtractCSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Formatting/DomSpacingVisitor.cs:
	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Formatting/DomFormattingVisitor.cs:
	* MonoDevelop.CSharp.Formatting/DomIndentationVisitor.cs:
	* MonoDevelop.CSharp.Dom/Expressions/ThisReferenceExpression.cs:
	  Worked on new formatter/parser.

2010-03-05  Michael Hutchinson  <mhutchinson@novell.com>

	* CSharpBinding.csproj: Don't local-copy project refs, as it
	  duplicates assemblies and breaks running on .NET.

2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/DomFormattingVisitor.cs:
	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
	  Removed debug message.

2010-03-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/Statements/SwitchStatement.cs:
	* MonoDevelop.CSharp.Formatting/DomFormattingVisitor.cs:
	* MonoDevelop.CSharp.Dom/Expressions/TypeOfExpression.cs:
	* MonoDevelop.CSharp.Dom/Expressions/SizeOfExpression.cs:
	* MonoDevelop.CSharp.Dom/TypeMembers/MethodDeclaration.cs:
	* MonoDevelop.CSharp.Formatting/CSharpFormattingPolicy.cs:
	* MonoDevelop.CSharp.Dom/Expressions/CheckedExpression.cs: